# lexifuzz-ner

./: LICENSE  README.md  pyproject.toml  setup.cfg
lexfuzz_ner/: ner.py
src/lexifuzz_ner/: ner.py
src/lexifuzz_ner.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
