[build-system]
requires = ["setuptools>=61.0", "thefuzz", "nltk"]
build-backend = "setuptools.build_meta"

[project]
name = "lexifuzz-ner"
version = "0.0.1"
authors = [
  { name="Hanif Yuli Abdillah P", email="hanifabd23@gmail.com" },
]
description = "Python package for detect entity in a text based on dictionary and fuzzy similarity"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Repository" = "https://github.com/hanifabd/lexifuzz-ner"