[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools>=61.0"
]

[tool.poetry]
name = "lexifuzz-ner"
version = "0.0.1"
authors = "Hanif Yuli Abdillah P <hanifabd23@gmail.com>"
description = "Python package for detecting entities in text based on a dictionary and fuzzy similarity"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.7"
thefuzz = "*"
nltk = "*"

[tool.poetry.dev-dependencies]
