[metadata]
name = lexfuzz_ner
version = 0.0.1
author = Hanif Yuli Abdillah P
author_email = hanifabd23@gmail.com
description = Python package for detect entity in a text based on dictionary and fuzzy similarity
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hanifabd/lexfuzz_ner
classifiers = 
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = True